--- a/skin.estuary.mod/changelog.txt
+++ b/skin.estuary.mod/changelog.txt
@@ -1,3 +1,6 @@
+1.6.5 :
+• Minnor fixes
+
 1.6.4 :
 • Add status of tv shows from Next Aired addon on video infos
 • Add genres icons for thumbnails
