--- a/skin.estuary.mod/language/resource.language.en_gb/strings.po
+++ b/skin.estuary.mod/language/resource.language.en_gb/strings.po
@@ -756,6 +756,11 @@ msgctxt "#31147"
 msgid "Download add-ons"
 msgstr ""
 
+#: /1080i/DialogNumeric.xml
+msgctxt "#31151"
+msgid "Numeric keypad"
+msgstr ""
+
 msgctxt "#40000"
 msgid "Show movies and tv shows clearlogos"
 msgstr ""
