--- a/skin.estuary.mod/language/resource.language.fr_fr/strings.po
+++ b/skin.estuary.mod/language/resource.language.fr_fr/strings.po
@@ -623,6 +623,11 @@ msgctxt "#31147"
 msgid "Download add-ons"
 msgstr "Télécharger des extensions"
 
+#: /1080i/DialogNumeric.xml
+msgctxt "#31151"
+msgid "Numeric keypad"
+msgstr "Clavier numérique"
+
 msgctxt "#40000"
 msgid "Show movies and tv shows clearlogos"
 msgstr "Afficher les logos des films et séries TV"
