--- a/skin.estuary.mod/language/resource.language.de_de/strings.po
+++ b/skin.estuary.mod/language/resource.language.de_de/strings.po
@@ -137,7 +137,7 @@ msgid "Last logged in"
 msgstr "Zuletzt angemeldet"
 
 msgctxt "#31030"
-msgid "Memory used"
+msgid "System Memory used"
 msgstr "Genutzter Arbeitsspeicher"
 
 msgctxt "#31031"
