--- a/skin.estuary.mod/changelog.txt
+++ b/skin.estuary.mod/changelog.txt
@@ -1,5 +1,8 @@
 1.6.6 :
+• Add possibility to disable items in personnalize home menu (with button and context menu)
+• Add privacy policy support on system info
 • Rework on vertical home menu
+• Rewrite xmls for script.globalsearch
 • Fix power menu
 • Minnor fixes
 
