--- a/skin.estuary.mod/language/resource.language.en_gb/strings.po
+++ b/skin.estuary.mod/language/resource.language.en_gb/strings.po
@@ -1812,3 +1812,35 @@ msgstr ""
 msgctxt "#40262"
 msgid "Replace background of [B]Power options[/B] shortcut."
 msgstr ""
+
+msgctxt "#40263"
+msgid "Disable item."
+msgstr ""
+
+msgctxt "#40264"
+msgid "Enable item."
+msgstr ""
+
+msgctxt "#40265"
+msgid "Up item"
+msgstr ""
+
+msgctxt "#40266"
+msgid "Down item"
+msgstr ""
+
+msgctxt "#40267"
+msgid "Add item"
+msgstr ""
+
+msgctxt "#40268"
+msgid "Enable item"
+msgstr ""
+
+msgctxt "#40269"
+msgid "Disable item"
+msgstr ""
+
+msgctxt "#40270"
+msgid "Delete item"
+msgstr ""
