--- a/skin.estuary.mod/changelog.txt
+++ b/skin.estuary.mod/changelog.txt
@@ -1,6 +1,8 @@
 1.6.7 :
 • Add skin setting to use basic vertical menu instead of dynamic vertical menu
 • Fix personnalize menu focus when item is disabled
+• Fix opacity background on Next Aired addon
+• Fix videoinfo button
 • Minnor fixes
 
 1.6.6 :
