Fix translations files

--- a/skin.estuary.mod.kodi18/language/resource.language.ru_ru/strings.po
+++ b/skin.estuary.mod.kodi18/language/resource.language.ru_ru/strings.po
@@ -1966,8 +1966,7 @@ msgstr "Отключить хранитель экрана Kodi"
 
 msgctxt "#40277"
 msgid "Disable Kodi screensaver on fullscreen music playback."
-msgstr ""
-"Отключить хранитель экрана Kodi при полноэкранном воспроизведении музыки"
+msgstr "Отключить хранитель экрана Kodi при полноэкранном воспроизведении музыки"
 
 msgctxt "#40278"
 msgid "Show rating of TMDB rather than IMDB"
