--- a/skin.estuary.mod.kodi18/language/resource.language.en_gb/strings.po
+++ b/skin.estuary.mod.kodi18/language/resource.language.en_gb/strings.po
@@ -1892,3 +1892,27 @@ msgstr ""
 msgctxt "#40282"
 msgid "Replace background of [B]Games[/B] shortcut."
 msgstr ""
+
+msgctxt "#40283"
+msgid "Pattern type"
+msgstr ""
+
+msgctxt "#40284"
+msgid "Pattern color"
+msgstr ""
+
+msgctxt "#40285"
+msgid "Reset pattern color"
+msgstr ""
+
+msgctxt "#40286"
+msgid "Select pattern type of background."
+msgstr ""
+
+msgctxt "#40287"
+msgid "Change pattern color of background."
+msgstr ""
+
+msgctxt "#40288"
+msgid "Reset pattern color of background."
+msgstr ""
