--- a/skin.estuary.mod/language/resource.language.fr_fr/strings.po
+++ b/skin.estuary.mod/language/resource.language.fr_fr/strings.po
@@ -1783,3 +1783,7 @@ msgstr "Permet de changer la couleur du modèle de l'arrière-plan."
 msgctxt "#40288"
 msgid "Reset pattern color of background."
 msgstr "Permet de réinitialiser la couleur du modèle de l'arrière-plan."
+
+msgctxt "#40289"
+msgid "Horizontal guide"
+msgstr "Guide horizontal"
