• Add possibility to change pattern of background and his color • Add possibility to show epg guide with a horizontal layout

--- a/skin.estuary.mod.kodi18/changelog.txt
+++ b/skin.estuary.mod.kodi18/changelog.txt
@@ -4,6 +4,7 @@
 • Add games support
 • Add TVDB rating flag icon for TV Shows
 • Add possibility to change pattern of background and his color
+• Add possibility to show epg guide with a horizontal layout
 • Fix context menu for 21:9 screen
 • Fix extended info for 21:9 screen
 • Fix on favourites window
